# mongo-cxx-driver

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md  test.cpp
examples/: CMakeLists.txt  bson.cpp
src/: CMakeLists.txt  mongocxx.cpp  mongocxx.hpp
src/base/: bulk.cpp  bulk.h  client.cpp  client.h  collection.cpp  collection.h  cursor.cpp  cursor.h  database.cpp  database.h  exceptions.h  pipeline.h
src/bson/: builder.cpp  builder.hpp  document.cpp  document.h  document.hpp  element.h  json.hpp  libbson.hpp  oid.cpp  oid.hpp  string_or_literal.cpp  string_or_literal.hpp  types.cpp  types.hpp
src/bson/builder/: array.hpp  array_ctx.hpp  closed_ctx.hpp  concrete.cpp  concrete.hpp  document.hpp  document_ctx.hpp  forward_decls.hpp  helpers.cpp  helpers.hpp  impl.hpp  key_ctx.hpp  macros_off.hpp  macros_on.hpp  single_ctx.hpp  value_builder.hpp  value_ctx.hpp
src/bson/document/: element.cpp  value.cpp  value.hpp  view.cpp  view.hpp  view_or_value.hpp
src/bson/enums/: binary_sub_type.hpp  type.hpp
src/bson/util/: functor.hpp  itoa.cpp  itoa.hpp  stack.hpp
src/bsoncxx/: types.hpp
src/bsoncxx/array/: value.cpp  view.cpp
src/bsoncxx/builder/: core.cpp  core.hpp
src/bsoncxx/builder/basic/: document.hpp  impl.hpp  kvp.hpp  sub_document.hpp
src/bsoncxx/builder/stream/: append.hpp  array.hpp  document.hpp  helpers.hpp
src/bsoncxx/document/: element.cpp  value.cpp  view.cpp  view.hpp
src/bsoncxx/test/: bson_builder.cpp
src/bsoncxx/types/: value.cpp  value.hpp
src/driver/: CMakeLists.txt  libmongoc.cpp  libmongoc.hpp  libmongoc_symbols.hpp
src/driver/base/: CMakeLists.txt  bulk.cpp  bulk.h  bulk.hpp  bulk_write.cpp  bulk_write.hpp  client.cpp  client.h  client.hpp  collection.cpp  collection.h  collection.hpp  cursor.cpp  cursor.h  cursor.hpp  database.cpp  database.h  database.hpp  exceptions.h  host.hpp  index_spec.cpp  index_spec.hpp  instance.cpp  instance.hpp  options.cpp  options.hpp  pipeline.cpp  pipeline.h  pipeline.hpp  read_preference.cpp  read_preference.hpp  settings.cpp  settings.hpp  uri.cpp  uri.hpp  write_concern.cpp  write_concern.hpp  write_type.hpp
src/driver/base/private/: bulk_write.hpp  client.hpp  collection.hpp  cursor.hpp  database.hpp  pipeline.hpp  read_preference.hpp  uri.hpp  write_concern.hpp
src/driver/config/: postlude.hpp  prelude.hpp
src/driver/exception/: exceptions.hpp
src/driver/fluent/: findable.hpp
src/driver/model/: CMakeLists.txt  aggregate.cpp  aggregate.hpp  bulk.cpp  bulk.h  bulk.hpp  bulk_write.cpp  bulk_write.hpp  count.cpp  count.h  count.hpp  delete_many.cpp  delete_many.hpp  delete_one.cpp  delete_one.hpp  distinct.cpp  distinct.h  distinct.hpp  find.cpp  find.h  find.hpp  find_and_remove.h  find_and_remove.hpp  find_and_replace.h  find_and_replace.hpp  find_and_update.h  find_and_update.hpp  find_one_and_delete.cpp  find_one_and_delete.hpp  find_one_and_remove.cpp  find_one_and_remove.hpp  find_one_and_replace.cpp  find_one_and_replace.hpp  find_one_and_update.cpp  find_one_and_update.hpp  insert.cpp  insert.h  insert.hpp  insert_many.cpp  insert_many.hpp  (+26 more)
src/driver/model/private/: bulk_write.hpp
src/driver/operation/: CMakeLists.txt  command.hpp  count.hpp  distinct.h  distinct.hpp  find_and_modify.h  find_and_modify.hpp  insert.h  insert.hpp  query.hpp  remove.hpp  update.h  update.hpp
src/driver/options/: aggregate.cpp  aggregate.hpp  bulk_write.cpp  bulk_write.hpp  client.cpp  client.hpp  count.cpp  count.hpp  delete.cpp  delete.hpp  distinct.cpp  distinct.hpp  find.cpp  find.hpp  find_one_and_delete.hpp  find_one_and_modify.hpp  find_one_and_replace.cpp  find_one_and_replace.hpp  find_one_and_update.cpp  find_one_and_update.hpp  insert.cpp  insert.hpp  ssl.hpp  update.cpp  update.hpp
src/driver/private/: cast.hpp  libmongoc.hpp  libmongoc_symbols.hpp
src/driver/request/: insert.cpp  insert.h  insert.hpp  write.h  write.hpp
src/driver/result/: bulk_write.cpp  bulk_write.hpp  delete.cpp  delete.hpp  distinct.hpp  explain.h  explain.hpp  insert_many.hpp  insert_one.cpp  insert_one.hpp  remove.hpp  replace_one.hpp  update.hpp  write.cpp  write.h  write.hpp
src/driver/util/: CMakeLists.txt  adapter.hpp  is_iterable.hpp  libbson.cpp  libbson.h  libbson.hpp  optional.cpp  optional.hpp  unique_ptr_void.hpp
src/mock/: mock.hpp
src/models/: aggregate.h  bulk.cpp  bulk.h  count.h  distinct.h  find.cpp  find.h  find_and_remove.h  find_and_replace.h  find_and_update.h  insert.cpp  insert.h  insert_request.cpp  insert_request.h  query.h  read.h  remove.h  replace.h  update.h  write.h  write_request.h
src/mongocxx/options/: find.cpp  find.hpp
src/mongocxx/test/: CMakeLists.txt
src/mongocxx/test/options/: find.cpp
src/operations/: command.h  count.h  insert.h  query.h  remove.h
src/options/: aggregate.h  find.h  find.h.gch  find_and_remove.h  find_and_replace.h  find_and_update.h  insert.h  query.h  read.h  remove.h  replace.h  update.h  write.h
src/private/: preamble.hpp
src/results/: distinct.h  write.cpp  write.h
src/stdx/: make_unique.hpp
src/test/: test_3.cpp
src/util/: adapter.h  libbson.cpp  libbson.h  mock.hpp  optional.cpp  optional.h
test/: CMakeLists.txt  bson_builder.cpp  bson_gen_macros.h  bson_pp.h  collection.cpp  test_1.cpp  test_2.cpp  test_3.cpp  test_4.cpp  test_5.cpp
test/bson/: new_tests.cpp
test/driver/base/: bulk_write.cpp  client.cpp  collection.cpp  database.cpp  write_concern.cpp
test/driver/base/private/: write_concern.cpp
test/driver/model/: update_many.cpp
test/driver/options/: aggregate.cpp
test/driver/result/: delete.cpp  insert_one.cpp  replace_one.cpp  update.cpp
test/include/: helpers.hpp
tests/: CMakeLists.txt  test_1.cpp  test_2.cpp  test_3.cpp
